Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.65.00

              Recognize SIGPWR on systems that have it in messages
              about signal received.

              pstopnm: More rational default for landscape/portrait choice.
              In particular, if the image or page is square, image will always
              be in portrait (not rotated).

              pnmtops: Fix crash with 12 bits per sample.  Introduced in 10.53
              (December 2010).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmtops: Fix bug: wrong output with -ascii85.  Introduced in
              10.63 (June 2013).

              pnmtops: Fix bug: wrong output with -rle.  Introduced in
              10.63 (June 2013).

              pnmtops: Fix bug: program hangs if it inherits lots of open
              files.  Introduced in 10.56 (September 2011).

              pnmtops: Fix bug: fails with message about waitpid() failing
              if invoked with SIGCHLD ignored.  Introduced in 10.56
              (September 2011).

              Fix wild pointer dereference when memory allocation for a string
              fails.  Broken since 10.36 (September 2006).

              Build for big-endian machines: fix syntax error so it compiles.
              Introduced in 10.63 (June 2013).

              Fix compile failure on system such as OpenBSD that don't have
              SIGWINCH and SIGIO.  Broken since 10.49 (December 2009).

              Build: Use SSE2 vector instructions when compiling with Clang,
              as done already with GCC.

              Build: Use <emmintrin.h> interface for SSE intrinsics
              instead of GCC-specific versions.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              Build on system without vasprintf (not GNU libc): fix compiler
              warning.

              Apple build: use vasprintf.

13.09.28 BJH  Release 10.64.00
