@@ -13,6 +13,10 @@ not yet  BJH  Release 10.65.00
               In particular, if the image or page is square, image will always
               be in portrait (not rotated).
 
+              pnmtops: Fix spurious blank line in asciihex encoding of the
+              image raster.  Probably harmless.  Introduced in 10.56
+              (September 2011).
+
               pnmtops: Fix crash with 12 bits per sample.  Introduced in 10.53
               (December 2010).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.
 
